🎥 - Cleanup to writing page, initialize home reveal on landing

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -68,6 +68,10 @@
 
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
+
+    <script>
+        document.body.classList.remove('no-js');
+    </script>
 </head>
 
 <body class="no-js {% if bodyClass %}{{ bodyClass }}{% endif %}">
@@ -85,9 +89,6 @@
     </div>
     {% include 'footer.njk' %}
     {% include 'grid.njk' %}
-    <script>
-        document.body.classList.remove('no-js')
-    </script>
     {# TODO: Remove splitting dependency #}
     <script src="/js/vendor/splitting.min.js"></script>
     <script src="/js/index.js" type="module"></script>
