🪪 - External cards actual links

--- a/src/_includes/recent-reading.njk
+++ b/src/_includes/recent-reading.njk
@@ -12,7 +12,7 @@
                 <article class="card card--linked">
                     <h1 class="card__title">{{ post.title }}</h1>
                     <div class="card__author">{{ post.author }}</div>
-                    <a class="card__link" href="{{ post.url }}">Read more →</a>
+                    <a class="card__link with-arrow with-arrow--out" href="{{ post.url }}">Read more</a>
                 </article>
             {% endfor %}
         </div>
