--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -15,6 +15,10 @@
     }
   }
 
+  &--clickable {
+    cursor: pointer;
+  }
+
   &__title {
     font-family: $font-serif-display;
     font-size: 2rem;
@@ -38,19 +42,32 @@
     text-decoration: none;
     font-family: $font-sans;
     text-transform: uppercase;
-    display: block;
+    display: inline-block;
+    position: relative;
+    width: fit-content;
 
-    .card--linked & {
-      &::before {
-        position: absolute;
-        z-index: 2;
-        inset: 0;
-        content: '';
+    &::before {
+      position: absolute;
+      bottom: 6px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      content: '';
+      transition: transform 0.2s $ease-out-editorial;
+      transform: scaleX(0);
+      transform-origin: 0 0;
+      background-color: currentColor;
+      @media (prefers-reduced-motion: reduce) {
+        transition-duration: 0s;
       }
     }
 
-    &:hover {
-      text-decoration: underline;
+    &:hover,
+    .card--clickable:is(:hover, :focus) & {
+      // text-decoration: underline;
+      &::before {
+        transform: scale(1);
+      }
     }
   }
 }
