📝 - Add Ricky Michiels case

--- a/src/scss/base/_rendered.scss
+++ b/src/scss/base/_rendered.scss
@@ -33,6 +33,8 @@
     margin-block-start: 1em;
     margin-block-end: 1em;
     color: $color-text-mid;
+    text-wrap: auto;
+    line-height: 1;
   }
 
   h4 {
