--- a/src/_includes/layouts/og.njk
+++ b/src/_includes/layouts/og.njk
@@ -17,8 +17,7 @@ crossorigin />
 <body{% if bodyClass %} class="{{ bodyClass }}"{% endif %}>
     {{ content | safe }}
     <footer class="footer">
-        <span class="season">✷ ver. fw24</span>
-        {# <span class="author">henry from online</span> #}
+        <span class="season">✷ ver. ss25</span>
         <span class="disclaimer">i’ll log off when i’m dead</span>
     </footer>
 </body>
