--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -6,12 +6,12 @@ $color-border-light: #{var(--color-border-light)};
 
 $color-text-unthemed: #2a2722;
 
-$font-sans: "Neue Montreal", sans-serif;
-$font-display: "Manuka", sans-serif;
-$font-serif: "Louize", serif;
-$font-serif-display: "Louize Display", serif;
+$font-sans: 'Neue Montreal', sans-serif;
+$font-display: 'Manuka', sans-serif;
+$font-serif: 'Louize', serif;
+$font-serif-display: 'Louize Display', serif;
 
-$default-border-radius: 0.75rem; // 12px
+$default-border-radius: 0.75rem;
 
 $bdrs: $default-border-radius;
 
