--- a/src/micro.njk
+++ b/src/micro.njk
@@ -25,21 +25,17 @@
 ---
 {% from './_includes/social-icon.njk' import socialIcon %}
 
-{# {% renderTemplate "webc" %}
-    <page-nav></page-nav>
-{% endrenderTemplate %} #}
-
 <div class="infinite-scroll">
     <header class="micro-header">
         <div class="micro-header__inner">
             <h1 class="page-header__title micro-header__title">Micro</h1>
-            <p class="micro-header__description">Temporal, fleeting whims and outright shitposts. This feed syndicates to common social media targets across the web.</p>
-            {# {% include 'table-of-contents.njk' %} #}
+            <p class="micro-header__description">Temporal, fleeting whims and outright shitposts. This feed syndicates
+                to common social media targets across the web.</p>
             <aside class="page-header__aside window">
                 <h3>Elsewhere</h3>
                 <ul class="social-list">
                     {% for socialLink in feedLinks %}
-                        {% include "social-link-list-item.njk" %}
+                    {% include "social-link-list-item.njk" %}
                     {% endfor %}
                 </ul>
             </aside>
@@ -48,13 +44,14 @@
     <div class="feed container">
         <p class="feed-title">Read the latest, scroll infinitely.</p>
         <svg class="feed-indicator" xmlns="http://www.w3.org/2000/svg" fill="#dadada" viewBox="0 0 16 87">
-            <path fill-rule="evenodd" d="M8.7068 86.7071c-.3905.3905-1.0237.3905-1.4142 0l-6.364-6.364c-.3905-.3905-.3905-1.0236 0-1.4142.3906-.3905 1.0237-.3905 1.4143 0l4.6568 4.6569V0h2v83.5858l4.6569-4.6569c.3905-.3905 1.0236-.3905 1.4142 0 .3905.3906.3905 1.0237 0 1.4142l-6.364 6.364Z" clip-rule="evenodd"/>
+            <path fill-rule="evenodd"
+                d="M8.7068 86.7071c-.3905.3905-1.0237.3905-1.4142 0l-6.364-6.364c-.3905-.3905-.3905-1.0236 0-1.4142.3906-.3905 1.0237-.3905 1.4143 0l4.6568 4.6569V0h2v83.5858l4.6569-4.6569c.3905-.3905 1.0236-.3905 1.4142 0 .3905.3906.3905 1.0237 0 1.4142l-6.364 6.364Z"
+                clip-rule="evenodd" />
         </svg>
-
-    {% for post in collections['micro'] | sortedByPublishDate %}
+        {% for post in collections['micro'] | sortedByPublishDate %}
         <article class="post post--by-self">
             <div class="post__content">
-            <p>{{ post.data.text }}</p>
+                <p>{{ post.data.text }}</p>
             </div>
             <footer class="post__footer">
                 <time class="post__date">{{ post.data.date | humanReadableDateTime }}</time>
@@ -76,11 +73,10 @@
             </footer>
         </article>
         {% if not loop.last %}
-            <svg class="feed-divider" xmlns="http://www.w3.org/2000/svg" fill="#dadada" viewBox="0 0 2 86">
-                <path fill-rule="evenodd" d="M2 0v86H0V0h2Z" clip-rule="evenodd"/>
-            </svg>
+        <svg class="feed-divider" xmlns="http://www.w3.org/2000/svg" fill="#dadada" viewBox="0 0 2 86">
+            <path fill-rule="evenodd" d="M2 0v86H0V0h2Z" clip-rule="evenodd" />
+        </svg>
         {% endif %}
-    {% endfor %}
-
-  </div>
+        {% endfor %}
+    </div>
 </div>
