--- a/src/scss/components/_case-study-block.scss
+++ b/src/scss/components/_case-study-block.scss
@@ -1,6 +1,11 @@
 @use '../abstract/variables' as *;
 @use '../abstract/mixins' as *;
 
+@counter-style blocks {
+  system: extends numeric;
+  pad: 2 '0';
+}
+
 .case-study-block {
   position: relative;
   margin-block-end: 1rem;
@@ -37,7 +42,7 @@
     font-size: 0.75rem;
     display: inline-block;
     margin-block-end: 0.75rem;
-    content: '(0' counter(case-studies) ')';
+    content: '(' counter(case-studies, blocks) ')';
 
     @include screen(xl) {
       align-self: start;
