--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@
 @use 'components/speaking-list';
 @use 'components/post';
 @use 'components/embed';
+@use 'components/recognition-chart';
 @use 'components/grid-overlay';
 
 @use 'pages/home';
