🧪 - Further test adjustments to eleventy-img

--- a/src/scss/base/_article-content.scss
+++ b/src/scss/base/_article-content.scss
@@ -74,10 +74,11 @@
     background-color: $color-border-light;
     color: $color-text;
     grid-column: var(--standard-column);
+    height: auto;
   }
 
   .flow {
-    margin-block-end: 1lh;
+    margin-block: 2lh;
   }
 }
 
