📝 - Change copy for next post CTA

--- a/src/_includes/layouts/_article.njk
+++ b/src/_includes/layouts/_article.njk
@@ -54,7 +54,7 @@ bodyClass: "article"
 {% if nextPost or prevPost %}
     <!-- TODO: Next post doesn't work with webC -->
     <aside class="further-reading container">
-        <h2>Further Reading</h2>
+        <h2>Try this next</h2>
         {% if nextPost %}
             {{ articleBlock(nextPost) }}
         {% else %}
