--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -92,5 +92,6 @@
     {# TODO: Remove splitting dependency #}
     <script src="/js/vendor/splitting.min.js"></script>
     <script src="/js/index.js" type="module"></script>
+    <script data-taxi-reload src="https://cdn.usefathom.com/script.js" data-site="ADEBIAUD" defer></script>
 </body>
 </html>
