--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -41,7 +41,7 @@
     {%- if og -%}
         <meta property="og:image" content="{{ og }}">
     {% else %}
-        <meta property="og:image" content="https://dev.henry.codes/img/og/og-default.png">
+        <meta property="og:image" content="https://henry.codes/img/og/og-default.png">
     {%- endif -%}
 
     <!-- Indieweb -->
