--- a/src/rss/notes.njk
+++ b/src/rss/notes.njk
@@ -14,7 +14,7 @@
     }
 }
 ---
-{%- for post in collections.note | reverse %}
+{%- for post in collections.note | sortedByPublishDate %}
 {%- set absolutePostUrl = post.url | htmlBaseUrl(metadata.base) %}
 <item>
     <title>{{ post.data.title }}</title>
