🧪 - Test fix for marquee overlap jank

--- a/src/index.njk
+++ b/src/index.njk
@@ -32,3 +32,5 @@ footerLinks: false
     <a class="home-articles__link" href="/writing">View all articles →</a>
 </section>
 <img class="footer-border" src="/img/footer-border.png" alt="">
+
+<script src="/js/marquees.js" type="module" data-taxi-reload></script>
