--- a/src/index.njk
+++ b/src/index.njk
@@ -33,4 +33,4 @@ footerLinks: false
 </section>
 <img class="footer-border" src="/img/footer-border.png" alt="">
 
-<script src="/js/marquees.js" type="module" data-taxi-reload></script>
+{# <script src="/js/marquees.js" type="module" data-taxi-reload></script> #}
