--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -86,6 +86,7 @@
     </div>
     {% include 'footer.njk' %}
     {% include 'grid.njk' %}
+    {% include 'hire-me-button.njk' %}
      <script>
         document.body.classList.remove('no-js');
     </script>
