--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -529,6 +529,8 @@
   padding: 4rem 1rem;
 
   &__title {
+    --banner-scale: 1;
+
     font-family: $font-display;
     font-size: 7.5rem;
     font-weight: 400;
@@ -550,6 +552,8 @@
     &::after {
       @include screen(sm) {
         display: block;
+        transform-origin: 0 0;
+        transform: scaleX(var(--banner-scale));
         flex: 1;
         height: 0.1em;
         content: '';
@@ -580,6 +584,8 @@
   padding: 4rem 1rem;
 
   &__title {
+    --banner-scale: 1;
+
     font-family: $font-display;
     font-size: 7.5rem;
     font-weight: 400;
@@ -598,6 +604,8 @@
 
     &::before {
       @include screen(sm) {
+        transform-origin: 100% 0;
+        transform: scaleX(var(--banner-scale));
         display: block;
         width: 100%;
         height: 0.1em;
