🧼 - Remove unnecessary text duplication in home-about title

--- a/src/_components/home-about.webc
+++ b/src/_components/home-about.webc
@@ -8,11 +8,7 @@
 <section class="home-about">
     <div class="container">
         <h2 class="home-about__title">
-            <div class="home-about__title-inner">
-                <span aria-hidden="true" class="home-about__title-echo">about the author</span>
-                <span class="home-about__title-text">about the author</span>
-                <span aria-hidden="true" class="home-about__title-echo">about the author</span>
-            </div>
+            <div class="home-about__title-inner">About the author</div>
         </h2>
         <div class="home-about__marquee" data-marquee>
             <div class="home-about__marquee-inner" data-marquee-inner>
