🎨 - Theme color meta

--- a/src/scss/base/_rendered.scss
+++ b/src/scss/base/_rendered.scss
@@ -97,6 +97,7 @@
     max-width: unset;
     margin-inline: 0;
     padding-inline: 1rem;
+    border-inline-start-width: 0.5rem;
   }
 
   &::before {
