--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,8 +26,8 @@
     <link rel="me" href="https://github.com/xdesro">
     <link rel="manifest" href="/meta/site.webmanifest" />
     <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#000000" />
-    <meta name="msapplication-TileColor" content="#f5f5f5" />
-    <meta name="theme-color" content="#F5F5F5" />
+    <meta name="msapplication-TileColor" content="#2a2722" />
+    <meta name="theme-color" content="#2a2722" />
     <meta name="generator" content="eleventy">
 
     <meta property="og:url" content="https://henry.codes">
